# npu-document-quarto-template

./: .gitignore  _quarto.yml  article.qmd  pyproject.toml
tex_utils/: npu_custom_template.latex  titlepage.tex
tex_utils/styles/: documentsettings.tex  titlesettings.tex
