[project]
name = "articles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
]
